# clearsignal

./: .gitignore  CLAUDE.md  README.md  dev.ps1  dev.sh
backend/: .env.example  pyproject.toml  railway.toml  requirements.txt
backend/agents/: backtest_engine.py  chart_data.py  chat.py  debate.py  financials.py  fomo_detector.py  social_pulse.py  stock_intel.py  ticker_utils.py  trader.py
backend/app/: bitget_client.py  database.py  explainer.py  llm_client.py  main.py  routes.py  schemas.py
backend/signal_engine/: engine.py  models.py  normalizer.py  voter.py
backend/tests/: test_agents.py  test_backtest_engine.py  test_bitget_client.py  test_comparison.py  test_database.py  test_engine.py  test_explainer.py  test_llm_client.py  test_models.py  test_normalizer.py  test_routes.py  test_schemas.py  test_voter.py
context/: MEMORY.md
context/memory/: 2026-06-12.md
docs/superpowers/plans/: 2026-06-11-plan1-signal-engine-core.md  2026-06-11-plan2-backend-api.md  2026-06-11-plan3-frontend-dashboard.md  2026-06-13-ui-restructure.md  2026-06-15-ui-restructure-impl.md  2026-06-24-backtest-engine.md
docs/superpowers/specs/: 2026-06-10-clearsignal-design.md  2026-06-12-multi-agent-upgrade.md  2026-06-13-decision-autopsy.md  2026-06-15-ui-restructure-design.md  2026-06-24-backtest-engine-design.md
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AchievementBadges.tsx  LandingNav.tsx  (+16 more)
sample-output/: nvda-backtest.json  nvda-debate.json  scanner.json
(+10 files in other folders)
